--- a/biryang_2주차/17298_오큰수.md
+++ b/biryang_2주차/17298_오큰수.md
@@ -9,7 +9,7 @@ https://www.acmicpc.net/problem/17298
 ### Stack
 * LIFO(Last In Last Out)
 * 삽입 / 삭제 : O(1)
-![Alt stack](/img/stack.png)
+![Alt stack](./img/stack.png)
 
 ## **문제 해결**
 ### 실수
