--- a/biryang_2주차/1874_스택 수열.md
+++ b/biryang_2주차/1874_스택 수열.md
@@ -9,13 +9,13 @@ https://www.acmicpc.net/problem/1874
 Stack 구조를를 사용합니다.
 * LIFO(Last In Last Out)
 * 삽입 / 삭제 : O(1)
-![Alt stack](/img/stack.png)
+![Alt stack](./img/stack.png)
 
 ## **문제 해결**
 1. 1부터 N까지의 스택에 추가를 할때마다 '+' 합니다.
 2. 스택에 수열에 해당하는 수가 들어오면 pop을 해주고 '-' 를 표시해줍니다.
 3. 만약 해당사항이 없다면 'NO'를 표시해줍니다.
-4. ![Alt stack](/img/스택수열.png)
+4. ![Alt stack](./img/스택수열.png)
 
 ## **시간복잡도(Big-O)**
 Stack의 push, pop만 하기 때문에 O(n)의 시간복잡도를 가집니다.
