--- a/biryang_2주차/1935_후위표기식2.md
+++ b/biryang_2주차/1935_후위표기식2.md
@@ -11,11 +11,11 @@ Stack과 Array 구조를를 사용합니다.
 * LIFO(Last In Last Out)
 * 삽입 / 삭제 : O(n)
 * 탐색 : O(1)
-![Alt array](/img/array.png)
+![Alt array](./img/array.png)
 ### Stack
 * LIFO(Last In Last Out)
 * 삽입 / 삭제 : O(1)
-![Alt stack](/img/stack.png)
+![Alt stack](./img/stack.png)
 
 ## **문제 해결**
 첫줄 N 해당하는 리스트를 생성하여 숫자들을 입력받습니다.
