--- a/biryang_2주차/2304_창고 다각형.md
+++ b/biryang_2주차/2304_창고 다각형.md
@@ -11,13 +11,13 @@ https://www.acmicpc.net/problem/2304
    
 그림 1은 창고를 옆에서 본 모습을 그린 것이다. 이 그림에서 굵은 선으로 표시된 부분이 지붕에 해당되고, 지붕과 땅으로 둘러싸인 다각형이 창고를 옆에서 본 모습이다. 이 다각형을 창고 다각형이라고 하자.
 
-![Alt stack](/img/2304.png)
+![Alt stack](./img/2304.png)
 
 ## **자료 구조**
 Array 구조 
 * 삽입 / 삭제 : O(N)
 * 탐색 : O(1)
-![Alt stack](/img/array.png)
+![Alt stack](./img/array.png)
 
 ## **문제 해결**
 1. 해당 L, H 의 배열 리스트를 입력 받습니다. 기준이 될 최대 높이를 따로 저장해줍니다.
