--- a/biryang_2주차/2841_외계인의 기타 연주.md
+++ b/biryang_2주차/2841_외계인의 기타 연주.md
@@ -4,7 +4,7 @@ https://www.acmicpc.net/problem/2841
 ### Stack
 * LIFO(Last In Last Out)
 * 삽입 / 삭제 : O(1)
-![Alt stack](/img/stack.png)
+![Alt stack](./img/stack.png)
 ## **문제 해결**
 1. 해당 줄에 하는 스택을 각자 만들어 줍니다.
 2. 입력이 줄에 해당하는 스택 top 보다 클 경우 push해주고 cnt를 증가 시켜줍니다.
@@ -12,7 +12,7 @@ https://www.acmicpc.net/problem/2841
 4. top 보다 작다면 pop을 통해 제거 cnt증가
 5. 위 동작을 반복하여 cnt의 값을 출력합니다.
 
-![Alt stack](/img/기타.png)
+![Alt stack](./img/기타.png)
 ## **시간복잡도(Big-O)**
 스택을 통해 삽입/삭제를 활용하는 문제입니다.
 O(N) 복잡도를 가집니다.
