--- a/biryang_2주차/3986_좋은 단어.md
+++ b/biryang_2주차/3986_좋은 단어.md
@@ -11,7 +11,7 @@ https://www.acmicpc.net/problem/3986
 ### Stack
 * LIFO(Last In Last Out)
 * 삽입 / 삭제 : O(1)
-![Alt stack](/img/stack.png)
+![Alt stack](./img/stack.png)
 
 ## **문제 해결**
 해당 문제는 [9012번 괄호]와 푸는 방식이 동일 ( )비교에서 A B로 치환한 문제
