--- a/biryang_2주차/1021_회전하는 큐.md
+++ b/biryang_2주차/1021_회전하는 큐.md
@@ -11,7 +11,7 @@ https://www.acmicpc.net/problem/1021
 
 ## **자료 구조**
 Deque : double-ended queue 양옆으로 양방향 데이터 처리가 가능한 queue형 자료구조를 사용합니다
-![Alt deque](/img/deque.png)
+![Alt deque](./img/deque.png)
 
 ## **문제 해결**
 문제 요구사항의 순환큐 동작
