--- a/biryang_2주차/10799_쇠막대기.md
+++ b/biryang_2주차/10799_쇠막대기.md
@@ -17,7 +17,7 @@ https://www.acmicpc.net/problem/10799
 Array 구조 
 * 삽입 / 삭제 : O(N)
 * 탐색 : O(1)
-![Alt stack](/img/array.png)
+![Alt stack](./img/array.png)
 
 ## **문제 해결**
 1. (, ), () 각 케이스별 동작
@@ -28,7 +28,7 @@ Array 구조
 3. ( 일경우 cut 될 숫자르 증가 시켜줍니다
 4. ) 들어올경우 이전과 비교해서 다르다면 합산을 해줍니다
 5. 연속으로 ) 들어올경우 막대기 끝나는 것을 알 수 있습니다.
-![Alt 2346](/img/쇠막대기.png)
+![Alt 2346](./img/쇠막대기.png)
 
 ## **시간복잡도(Big-O)**
 해당 문제는 Array의 탐색을 활용합니다.
