--- a/biryang_2주차/1158_요세푸스.md
+++ b/biryang_2주차/1158_요세푸스.md
@@ -7,7 +7,7 @@ https://www.acmicpc.net/problem/1158
 
 ## **자료 구조**
 Deque : double-ended queue 양옆으로 양방향 데이터 처리가 가능한 queue형 자료구조를 사용합니다
-![Alt deque](/img/deque.png)
+![Alt deque](./img/deque.png)
 ## **문제 해결**
 1. 먼저, n만큼의 queue를 만들어놓는다. (deque 사용)
 2. input으로 받은 n번만큼 반복
