--- a/biryang_2주차/1406_에디터.md
+++ b/biryang_2주차/1406_에디터.md
@@ -17,7 +17,7 @@ https://www.acmicpc.net/problem/1406
 Stack 구조를를 사용합니다.
 * LIFO(Last In Last Out)
 * 삽입 / 삭제 : O(1)
-![Alt stack](/img/stack.png)
+![Alt stack](./img/stack.png)
 
 ## **문제 해결**
 해당 문제는 커서의 위치 이동에 따른 명령어 수행이 중요사항입니다.
@@ -27,7 +27,7 @@ Stack 구조를를 사용합니다.
 2. 커서 이동
    1. 왼쪽 이동 : 커서스택에 pop
 3. 문자 삽입이라면 해당위치에서 push를 통해 문자를 입력해서 넣고 만약 삭제라면 문자열 스택에서 pop을 통해 삭제를 시킵니다.
-![Alt 2346](/img/2346.png)
+![Alt 2346](./img/2346.png)
 
 ## **시간복잡도(Big-O)**
 해당 문제는 pop, push로만 작동합니다 Stack은 삽입삭제시 O(1)이므로 명령어 수 N만큼 동작하기 때문에
