--- a/biryang_2주차/2346_풍선 터뜨리기.md
+++ b/biryang_2주차/2346_풍선 터뜨리기.md
@@ -6,7 +6,7 @@ N개의 풍선이 있다. 각 풍선 안에는 -N부터 N까지의 수가 적혀
 
 ## **자료 구조**
 Deque : double-ended queue 양옆으로 양방향 데이터 처리가 가능한 queue형 자료구조를 사용합니다
-![Alt deque](/img/deque.png)
+![Alt deque](./img/deque.png)
 
 ## **문제 해결**
 1. 먼저, n만큼의 queue를 만들어놓는다.
